force-app/main/default/objects/RCustomer__c/RCustomer__c.object-meta.xml
<CustomObject>
    <label>RCustomer</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>RCustomer Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RCustomers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>