force-app/main/default/objects/RCustomer__c/fields/NumOfSurveys__c.field-meta.xml
<CustomField>
    <fullName>NumOfSurveys__c</fullName>
    <label>NumOfSurveys</label>
    <summaryForeignKey>RSurvey__c.RCustomerId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>