force-app/main/default/objects/RCustomer__c/fields/Product_Name_Consolidated__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Consolidated__c</fullName>
    <label>Product Name Consolidated</label>
    <length>100</length>
    <type>Text</type>
</CustomField>