force-app/main/default/objects/RCustomer__c/fields/Product_Price_Consolidated__c.field-meta.xml
<CustomField>
    <fullName>Product_Price_Consolidated__c</fullName>
    <label>Product Price Consolidated</label>
    <length>100</length>
    <type>Text</type>
</CustomField>