force-app/main/default/objects/RCustomer__c/fields/Product_Rating_Consoldated__c.field-meta.xml
<CustomField>
    <fullName>Product_Rating_Consoldated__c</fullName>
    <label>Product Rating Consoldated</label>
    <length>100</length>
    <type>Text</type>
</CustomField>