force-app/main/default/objects/RCustomer__c/fields/RCustomer_Name__c.field-meta.xml
<CustomField>
    <fullName>RCustomer_Name__c</fullName>
    <label>RCustomer Name</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>